fix input width on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -70,4 +70,5 @@ footer {
   margin-left: 1rem;
   padding: 0.2rem 0.5rem;
   border-radius: 4px;
+  min-width: 1px;
 }
